--- a/date/2025-01/page-6.htm
+++ b/date/2025-01/page-6.htm
@@ -276,16 +276,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-39875.htm" title="CountDownLatch和CyclicBarrier：如何让多线程步调一致">CountDownLatch和CyclicBarrier：如何让多线程步调一致</a></li>
-                        <li class="py-2"><a href="/news/article-44343.htm" title="慢SQL，压垮团队的最后一根稻草">慢SQL，压垮团队的最后一根稻草</a></li>
-                        <li class="py-2"><a href="/news/article-39379.htm" title="深圳益沣成资产管理有限公司（深圳市益成实业有限公司）">深圳益沣成资产管理有限公司（深圳市益成实业有限公司）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-26-free-subscribe-node.htm" title="1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-25-free-high-speed-nodes.htm" title="12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-45834.htm" title="动物疫苗的使用方法及注意事项视频讲解下载 动物疫苗的使用方法及注意事项视频讲解下载">动物疫苗的使用方法及注意事项视频讲解下载 动物疫苗的使用方法及注意事项视频讲解下载</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-11-free-node-subscribe.htm" title="1月11日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月11日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
-                        <li class="py-2"><a href="/news/article-33576.htm" title="宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）">宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）</a></li>
-                        <li class="py-2"><a href="/news/article-30136.htm" title="什么是Python高阶函数">什么是Python高阶函数</a></li>
+                        <li class="py-2"><a href="/news/article-41846.htm" title="python开发HDFS">python开发HDFS</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-10-free-subscribe-node.htm" title="1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-30724.htm" title="动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）">动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）</a></li>
+                        <li class="py-2"><a href="/news/article-43835.htm" title="给动物打疫苗的简报 给动物打疫苗的简报怎么写">给动物打疫苗的简报 给动物打疫苗的简报怎么写</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-7-node-share.htm" title="1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-4-free-node-subscribe.htm" title="1月4日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月4日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
+                        <li class="py-2"><a href="/news/article-42849.htm" title="养狗的人容易得15种病视频讲解（养狗的人容易得癌症吗）">养狗的人容易得15种病视频讲解（养狗的人容易得癌症吗）</a></li>
+                        <li class="py-2"><a href="/news/article-30244.htm" title="动物疫苗接种时间查询app 动物疫苗查询系统">动物疫苗接种时间查询app 动物疫苗查询系统</a></li>
+                        <li class="py-2"><a href="/news/article-42353.htm" title="简单宠物寄养协议（宠物店宠物寄养协议）">简单宠物寄养协议（宠物店宠物寄养协议）</a></li>
                     </ul>
     </div>
 </div>
@@ -297,7 +297,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
