--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -122,6 +122,48 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-6-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="2月6日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-6-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">2月6日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、美国、香港、加拿大、欧洲、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-5-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="2月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-5-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">2月5日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、欧洲、加拿大、韩国、新加坡、日本等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-4-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="2月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-4-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">2月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、韩国、欧洲、加拿大、日本、香港、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-02-03">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-2-3-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -220,48 +262,6 @@
                                     这一次的节点更新覆盖了加拿大、新加坡、美国、香港、日本、韩国、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-27">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-27-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="1月27日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-27-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月27日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、韩国、加拿大、欧洲、新加坡、美国、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-26">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-26-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/d9a4784500436b3988dbfa5167e4a2a0.webp" alt="1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-26-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、韩国、美国、加拿大、新加坡、香港、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-25">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-25-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="1月25日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-25-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月25日→20.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、欧洲、美国、加拿大、新加坡、韩国、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -272,16 +272,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-2-3-free-node-subscribe-links.htm" title="2月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址">2月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-9-node-share.htm" title="1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-50331.htm" title="宠物寄养协议书范本大全最新（宠物寄养协议书范本大全最新下载）">宠物寄养协议书范本大全最新（宠物寄养协议书范本大全最新下载）</a></li>
-                        <li class="py-2"><a href="/news/article-47782.htm" title="Go能实现AOP吗">Go能实现AOP吗</a></li>
-                        <li class="py-2"><a href="/news/article-33576.htm" title="宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）">宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）</a></li>
-                        <li class="py-2"><a href="/news/article-46314.htm" title="动物疫苗保存条件是什么样的（动物疫苗在常温下能放多久）">动物疫苗保存条件是什么样的（动物疫苗在常温下能放多久）</a></li>
-                        <li class="py-2"><a href="/news/article-44342.htm" title="时间与日期——瞬时（Instant）">时间与日期——瞬时（Instant）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-15-free-node-subscribe-links.htm" title="1月15日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">1月15日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-47783.htm" title="芭比堂宠物医院投诉电话（芭比堂宠物医院电话是多少）">芭比堂宠物医院投诉电话（芭比堂宠物医院电话是多少）</a></li>
-                        <li class="py-2"><a href="/news/article-48244.htm" title="宠物粮食加工厂加盟条件是什么样的 宠物粮食加工厂加盟条件是什么样的呢">宠物粮食加工厂加盟条件是什么样的 宠物粮食加工厂加盟条件是什么样的呢</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-17-free-high-speed-nodes.htm" title="1月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-14-free-node-subscribe-links.htm" title="1月14日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月14日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-51394.htm" title="为MySQL创建高性能索引_Mysql_">为MySQL创建高性能索引_Mysql_</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-16-free-high-speed-nodes.htm" title="1月16日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">1月16日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-42353.htm" title="简单宠物寄养协议（宠物店宠物寄养协议）">简单宠物寄养协议（宠物店宠物寄养协议）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-1-free-high-speed-nodes.htm" title="2月1日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">2月1日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-31162.htm" title="兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）">兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-31-free-node-subscribe.htm" title="1月31日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月31日→20.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-26-free-subscribe-node.htm" title="1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-46315.htm" title="人用疫苗和兽用疫苗（人用疫苗和兽用疫苗一样吗）">人用疫苗和兽用疫苗（人用疫苗和兽用疫苗一样吗）</a></li>
                     </ul>
     </div>
 </div>
@@ -293,7 +293,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
